Fix logo on smaller devices

--- a/assets/css/blocks/nav.css
+++ b/assets/css/blocks/nav.css
@@ -3,16 +3,17 @@
   margin-bottom: var(--space-xx-large);
 }
 
-.nav ul {
-  grid-column: 1 / span 4;
-}
-
+.nav ul,
 .nav .headline {
-  grid-column: 1 / span 2;
+  grid-column: 1 / span 4;
 }
 
 @media (min-width: 800px) {
   .nav ul {
     grid-column: 3 / span 2;
+  }
+
+  .nav .headline {
+    grid-column: 1 / span 2;
   }
 }
